--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@ node_modules
 
 
 coverage.html
-.DS_Store
 lib-cov
 *.seed
 *.log
@@ -34,3 +33,68 @@ testing
 cover_html
 test.js
 .idea
+
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+
+# Logs and databases #
+######################
+*.log
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+# VIM and Temp files #
+######################
+*~
+*.swp
+*.swo
+*.s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
+### SASS Ignores - "Sassy CSS" http://sass-lang.com/
+*.sass-cache
+
+# Eclipse Nastiness
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
