--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "~3.3.4",
     "jade": "~0.34.0",
     "mongoose": "~3.6.14",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "socket.io": "~0.9.16"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
