--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-contrib-compass": "~0.2.0",
     "request": "~2.22.0",
     "sass": "~0.5.0",
-    "grunt-contrib-sass": "~0.5.0"
+    "grunt-contrib-sass": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0"
   }
 }
