--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "jade": "~0.34.0",
     "mongoose": "~3.6.14",
     "underscore": "~1.5.2",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "node-uuid": "~1.4.1",
+    "async": "~0.2.9"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -20,6 +22,7 @@
     "request": "~2.22.0",
     "sass": "~0.5.0",
     "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.7"
   }
 }
