--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "project_gamut",
   "version": "0.0.1",
   "private": true,
+  "main": "app.js",
   "scripts": {
-    "start": "app.js"
+    "start": "node app.js"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.3.x"
   },
   "dependencies": {
     "express": "~3.3.4",
@@ -24,5 +29,12 @@
     "grunt-contrib-sass": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.7"
-  }
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ],
+  "author": "Nathanael Beisiegel",
+  "license": "MIT"
 }
