--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "underscore": "~1.5.2",
     "socket.io": "~0.9.16",
     "node-uuid": "~1.4.1",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "node-sass": "~0.9.3"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
